@@ -396,9 +396,9 @@ void ts::TunerArgs::addHelp(Args& args) const
             u"Individual tuning options:\n"
             u"\n"
             u"  --bandwidth value\n"
-            u"      Used for DVB-T tuners only.\n"
-            u"      Must be one of \"auto\", \"8-MHz\", \"7-MHz\", \"6-MHz\", \"5-MHz\".\n"
-            u"      The default is \"8-MHz\".\n"
+            u"      Used for DVB-T/T2 tuners only.\n"
+            u"      Must be one of \"auto\", \"8-MHz\", \"7-MHz\", \"6-MHz\" and for DVB-T2\n"
+            u"      \"5-MHz\", \"10-MHz\", \"1.712-MHz\". The default is \"8-MHz\".\n"
             u"\n"
             u"  --delivery-system value\n"
             u"      Used for DVB-S and DVB-S2 tuners only.\n"
